<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:id="@+id/linearlayoutdatapost_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:paddingTop="10dp">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            app:cardBackgroundColor="#F7F7F7"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/heightedtid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@android:color/transparent"
                    android:importantForAutofill="no"
                    android:hint="@string/heightedtid"
                    android:imeOptions="actionNext"
                    android:minWidth="320dp"
                    android:minHeight="50dp"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                            </com.google.android.material.textfield.TextInputLayout>
                        </androidx.cardview.widget.CardView>


                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"
                            app:cardBackgroundColor="#F7F7F7"
                            app:cardCornerRadius="24dp"
                            app:cardElevation="0dp">

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                app:hintEnabled="false">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/weightedtid"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginLeft="12dp"
                                    android:layout_marginRight="12dp"
                                    android:background="@android:color/transparent"
                                    android:importantForAutofill="no"

                                    android:hint="@string/weightedtid"
                                    android:imeOptions="actionNext"
                                    android:inputType="number"
                                    android:minWidth="320dp"
                                    android:minHeight="50dp"
                                    android:singleLine="true"
                                    android:textSize="16sp"
                                    android:textStyle="bold"/>
                            </com.google.android.material.textfield.TextInputLayout>
                        </androidx.cardview.widget.CardView>


                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"
                            app:cardBackgroundColor="#F7F7F7"
                            app:cardCornerRadius="24dp"
                            app:cardElevation="0dp">

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                app:hintEnabled="false">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/ageedtid"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginLeft="12dp"
                                    android:layout_marginRight="12dp"
                                    android:background="@android:color/transparent"
                                    android:importantForAutofill="no"
                                    android:hint="@string/ageedtid"
                                    android:imeOptions="actionNext"
                                    android:inputType="number"
                                    android:minWidth="320dp"
                                    android:minHeight="50dp"
                                    android:singleLine="true"
                                    android:textSize="16sp"
                                    android:textStyle="bold"/>
                            </com.google.android.material.textfield.TextInputLayout>
                        </androidx.cardview.widget.CardView>


                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="30dp"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/maleradiobtnid"
                                android:layout_width="wrap_content"
                                android:layout_height="48dp"
                                android:checked="true"
                                android:paddingEnd="50dp"
                                android:text="@string/maleradiobtnid"
                                android:textColor="#D81B60"
                                tools:ignore="TextContrastCheck" />

                            <RadioButton
                                android:id="@+id/femaleradiobtnid"
                                android:layout_width="wrap_content"
                                android:layout_height="48dp"
                                android:text="@string/femaleradiobtnid" />
                        </RadioGroup>

                        <Button
                            android:id="@+id/savebtnid"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="40dp"
                            android:layout_marginTop="30dp"
                            android:backgroundTint="#0E4E8C"
                            android:text="@string/savebtnid"
                            android:textColor="#E19928"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

    <TextView
        android:id="@+id/detailsTitle"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="#5C6BC0"
        android:gravity="center"
        android:text="@string/detailsTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#ffffff"
        android:textSize="29sp"
        android:textStyle="bold"
        app:textAllCaps="false" />

    <TextView
        android:id="@+id/user_name_welcome"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="51dp"
        android:gravity="center"
        android:textSize="20dp"/>

</RelativeLayout>